# voziq-tooling

./: .backupignore  .coverage  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  AIPASS.md  AIPASS_REGISTRY.json  BRANCH_REGISTRY.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DPLAN-047_path_home_purge_portability_2026-03-06.md  Dockerfile  Dockerfile.test  FPLAN-0006_framework_skills_system_2026-03-07.md  GEMINI.md  HERALD.md  LICENSE  README.md  SECURITY.md  STATUS.md  STRESS_TEST_S117.md  aipass  codecov.yml  pyproject.toml  pyrightconfig.json  setup-workspace.sh  setup.py  setup.sh  your
.ai_mail/: MEMORY.central.json
.aicentral/: memory_bank.central.json
.aipass/: .gitignore  PROMPT_STYLE.md  README.md  aipass_global_prompt.md  hooks.json  project_AGENTS.md  project_CLAUDE.md  project_global_prompt.md  project_hooks.json  tier0_kernel.md  tier1_navmap.md
.claude/: CLAUDE.md  README.md  provider_manifest.json  settings.json
.claude/commands/: compass.md  memo.md  prep.md
.claude/global_hooks/: auto_fix_diagnostics.py  hook_logger.sh  notification_sound.py  statusline.sh  stop_sound.py  subagent_stop_gate.py  tool_use_sound.py
.claude/hooks/: .diagnostics_state.json  README.md  auto_fix_diagnostics.py  branch_prompt_loader.py  email_notification.py  engine.jsonl  git_gate.py  global_prompt_loader.py  hook_log.py  hook_report.py  hook_test.py  identity_injector.py  notification_sound.py  pre_compact.py  pre_compact_rollover.py  pre_edit_gate.py  prompt_inject.sh  stop_sound.py  subagent_stop_gate.py  tool_use_sound.py
.claude/hooks/probes/: Q12_findings_2026-04-20.md  README.md  probe_notification.py  probe_post_tool_use.py  probe_pre_compact.py  probe_pre_tool_use.py  probe_stop.py  probe_subagent_stop.py  probe_user_prompt_submit.py
.claude/templates/: memo.md
.codex/: hooks.json
.codex/hooks/: pre_edit_gate.py  prompt_inject.py  session_start_identity.py
.codex/skills/memo/: SKILL.md
.codex/skills/prep/: SKILL.md
.gemini/hooks/: pre_edit_gate.py  prompt_inject.py  session_start_identity.py
.gemini/skills/prep/: SKILL.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  feedback.yml
.github/requirements/: audit.in  audit.txt  build.in  build.txt  e2e.in  e2e.txt  lint.in  lint.txt  pip.in  pip.txt
.github/scripts/: seedgo_audit.py
.github/workflows/: ci.yml  e2e-wheel.yml  macos-test.yml  publish.yml  scorecard.yml  security.yml  stale.yml  windows-test.yml
.seedgo/: config.json
aipass_os/AI_CENTRAL/: AI_MAIL.central.json
project-seed/: AGENTS-brain-section.md  CLAUDE-brain-section.md  README.md  env.example.snippet  gitlab-ci.snippet.yml
project-seed/.claude/commands/: brain-memo.md
project-seed/.github/prompts/: brain-memo.prompt.md
src/aipass/: __init__.py
src/aipass/ai_mail/: DASHBOARD.local.json  README.md  dev.local.md  flow.local.md  requirements.project.txt  stress_test_s117.md
src/aipass/aipass/: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  __init__.py  requirements.project.txt
src/aipass/api/: .gitignore  CLAUDE.md  DASHBOARD.local.json  README.md  dev.local.md  flow.local.md  pytest.ini  requirements.project.txt
src/aipass/backup/: .gitignore  CLAUDE.md  README.md  __init__.py  dev.local.md  requirements.project.txt
src/aipass/cli/: DASHBOARD.local.json  README.md  __init__.py  __main__.py  dev.local.md  flow.local.md  requirements.project.txt  stress_test_s117.md
src/aipass/common/: __init__.py  json_handler.py  json_ops.py  registry_discovery.py
src/aipass/commons/: README.md  __init__.py
src/aipass/daemon/: README.md  daemon-tick.service  daemon-tick.timer  dev.local.md  pytest.ini
src/aipass/devpulse/: .gitignore  AGENTS.md  CLAUDE.md  DEVPULSE_REGISTRY.json  DPLAN-0087_devpulse_master_key_privileged_git_handler_fo_2026-03-30.md  GEMINI.md  README.md  SETUP.md  TELEGRAM_PORT_MAP.md  TEST_SYSTEM_PR_DELETE_ME.md  dev.local.md  stress_test_architecture_probe.md  stress_test_ux_probe.md
src/aipass/drone/: .gitignore  DASHBOARD.local.json  README.md  TEST_DEVPULSE_OPS_DELETE_ME.txt  __init__.py  cli.py  dev.local.md  drone_adapter.py  drone_command_registry.json  flow.local.md  modules.py  requirements.project.txt  stress_test_s117.md
src/aipass/flow/: CLOSED_PLANS.local.json  DASHBOARD.local.json  FPLAN-0010_fix_seedgo_standards_3_checker_bugs_doc__2026-03-08.md  FPLAN-0011_fix_ai_mail_caller_identity_detection_fo_2026-03-08.md  README.md  dev.local.md  flow.local.md  requirements.project.txt  stress_test_s117.md
src/aipass/hooks/: README.md
src/aipass/memory/: .gitignore  README.md  dev.local.md  requirements.project.txt  (+1 more)
src/commons/: .gitignore  README.md  dev.local.md  pytest.ini
src/seedgo/: __init__.py  __main__.py  bypass.py  cli.py  config.py  discovery.py  display.py  drone_adapter.py  exceptions.py  models.py  reporter.py  runner.py
src/skills/: README.md  __init__.py  dev.local.md
tests/: CROSS_OS_TESTING.md  _install_diag.sh  docker_dev_verify.sh  docker_owner_verify.sh  setup_symlink_guard_test.sh  test_drone_compliance.py  test_drone_modules.py  test_routing_core.py  test_routing_integration.py  test_routing_phase2.py  test_seedgo_cli.py  test_seedgo_core.py  test_seedgo_plugins.py  test_version.py
tests/e2e/: conftest.py  test_wiring.py
voziq-brain/: CLAUDE.md  CONTRIBUTING.md  README.md
voziq-brain/capture/: brain-lint.md  brain-memo.md
voziq-brain/decisions/: 0001-brain-conventions.md  0002-native-ai-tooling.md  0003-deliberately-deferred-choices.md  README.md  TEMPLATE.md
voziq-brain/docs/: mcp-server-spec.md
voziq-brain/domain/: README.md  TEMPLATE.md  client-isolation-model.md  data-gateway-staging.md  feature-bank-compute-once.md  mrr-is-config-driven.md  vertical-differences.md
voziq-brain/onboarding/: README.md
voziq-brain/runbooks/: README.md  TEMPLATE.md
voziq-brain/sessions/: README.md  TEMPLATE.md
voziq-pilot-kit/: README.md
voziq-pilot-kit/managed/: CLAUDE.md
voziq-pilot-kit/project/: CLAUDE.md
(+2176 files in other folders)
