[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aipass"
version = "1.0.0"
description = "Orchestration framework for autonomous AI agent ecosystems"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "AIPass", email = "aipass.system@gmail.com" },
]
keywords = ["ai", "agents", "routing", "discovery", "multi-agent", "orchestration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/AIOSAI/AIPass"
Repository = "https://github.com/AIOSAI/AIPass"
"Bug Tracker" = "https://github.com/AIOSAI/AIPass/issues"

[project.optional-dependencies]
trinity = [
    "trinity-pattern>=1.0.0",
]
seedgo = []
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]

[project.scripts]
drone = "aipass.drone.cli:main"
seedgo = "seedgo.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/aipass", "src/seedgo"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
