[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aipass"
version = "2.0.0"
description = "Orchestration framework for autonomous AI agent ecosystems"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "AIPass", email = "aipass.system@gmail.com" },
]
keywords = ["ai", "agents", "routing", "discovery", "multi-agent", "orchestration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "rich>=13.0",
    "watchdog>=3.0",
    "requests>=2.28",
    "openai>=1.0",
]

[project.urls]
Homepage = "https://github.com/AIOSAI/AIPass"
Repository = "https://github.com/AIOSAI/AIPass"
"Bug Tracker" = "https://github.com/AIOSAI/AIPass/issues"

[project.optional-dependencies]
trinity = [
    "trinity-pattern>=1.0.0",
]
seedgo = []
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "coverage",
    "pyright",
]

[project.scripts]
drone = "aipass.drone.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/aipass"]

[tool.pytest.ini_options]
testpaths = ["tests", "src"]
norecursedirs = ["templates", "*.egg-info", ".git", ".venv", "__pycache__"]

[tool.coverage.run]
source = ["src/aipass"]
omit = ["*/tests/*", "*/templates/*"]

[tool.coverage.report]
show_missing = true
fail_under = 70
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["E402"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
